--- a/mean/servidor/variables.env
+++ b/mean/servidor/variables.env
@@ -1,1 +1,1 @@
-DB_MONGO=mongodb+srv://marcosq:41624421@cluster0.jtivuqr.mongodb.net/meanproductos
+DB_MONGO=mongodb+srv://marcosq:{contraseña}@cluster0.jtivuqr.mongodb.net/meanproductos
